--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CineMatch - Your Movie Recommender</title>
+    <title>Movie Recommender</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -54,9 +54,6 @@
             <button class="btn" id="load-more-btn"><i class="fas fa-random"></i> Show More Recommendations</button>
         </div>
         
-        <footer>
-            <p>&copy; 2023 CineMatch - Movie Recommender System | Powered by TMDB</p>
-        </footer>
     </div>
 
     <script src="script.js"></script>
